exercise5.01/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummysite-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummysite-controller
  template:
    metadata:
      labels:
        app: dummysite-controller
    spec:
      serviceAccountName: dummysite-controller-account
      containers:
        - name: dummysite-controller
          image: anttitmh/dummysite
