exercise5.01/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummysite-svc
spec:
  type: ClusterIP
  selector:
    app: dummysite-controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
